force-app/main/default/objects/Approval_Process_Template_Step__c/Approval_Process_Template_Step__c.object-meta.xml
<CustomObject>
    <label>Approval Process Template Step</label>
    <nameField>
        <displayFormat>APTS-{0000}</displayFormat>
        <label>Approval Process Template Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>