force-app/main/default/objects/Approval_Process_Template_Step__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>